--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,11 +2,11 @@
 
 # specify here default training configuration
 defaults:
-  - trainer: default.yaml
-  - model: mnist_model.yaml
-  - datamodule: mnist_datamodule.yaml
+  - trainer: archery_bowling_trainer.yaml
+  - model: archery_bowling_model.yaml
+  - datamodule: archery_bowling_datamodule.yaml
   - callbacks: default.yaml # set this to null if you don't want to use callbacks
-  - logger: null # set logger here or use command line (e.g. `python run.py logger=wandb`)
+  - logger: tensorboard.yaml # set logger here or use command line (e.g. `python run.py logger=wandb`)
 
   - experiment: null
   - hparams_search: null
@@ -21,10 +21,13 @@ defaults:
 # hydra hijacks working directory by changing it to the current log directory,
 # so it's useful to have this path as a special variable
 # learn more here: https://hydra.cc/docs/next/tutorials/basic/running_your_app/working_directory
-work_dir: ${hydra:runtime.cwd}
+work_dir: ${hydra:runtime.cwd}/../
 
 # path to folder with data
-data_dir: ${work_dir}/data/
+data_dir: ${work_dir}/DATA/Archery_Bowling/
+log_dir: ${work_dir}/LOG/${name}/ #runs/${now:%Y-%m-%d--%H-%M-%S}
+name: "somethimgnweafndas"
+status_file: ${log_dir}/status-${name}.json
 
 # use `python run.py debug=true` for easy debugging!
 # this will run 1 train, val and test loop with only 1 batch
