--- a/configs/logger/tensorboard.yaml
+++ b/configs/logger/tensorboard.yaml
@@ -3,8 +3,8 @@
 tensorboard:
   _target_: pytorch_lightning.loggers.tensorboard.TensorBoardLogger
   save_dir: "tensorboard/"
-  name: "default"
-  version: null
+  name: ${name}
+  version: 0
   log_graph: False
   default_hp_metric: True
   prefix: ""
