--- a/configs/experiment/basic_bowling.yaml
+++ b/configs/experiment/basic_bowling.yaml
@@ -1,12 +1,7 @@
 # @package _global_
 
 defaults:
-  - override /trainer: archery_bowling_trainer.yaml
-  - override /model: archery_bowling_model.yaml
-  - override /datamodule: archery_bowling_datamodule.yaml
-  - override /callbacks: default.yaml # set this to null if you don't want to use callbacks
-  - override /logger: tensorboard.yaml # set logger here or use command line (e.g. `python run.py logger=wandb`)
-
+  - archery_height_F1.yaml
 
 datamodule:
   szenario: 'Bowling'
