--- a/configs/hydra/my_hydra.yaml
+++ b/configs/hydra/my_hydra.yaml
@@ -1,13 +1,9 @@
 # output paths for hydra logs
 run:
-#  dir: logs/runs/${now:%Y-%m-%d}/${now:%H-%M-%S}
   dir: ${log_dir}
-
 sweep:
-#  dir: logs/multiruns/${now:%Y-%m-%d_%H-%M-%S}
-  dir: ../LOG/multi/${name}__${now:%Y-%m-%d_%H-%M-%S}
+  dir: ${log_dir}/multiruns/${now:%Y-%m-%d--%H-%M-%S}
   subdir: ${hydra.job.num}
-
 
 # you can set here environment variables that are universal for all users
 # for system specific variables (like data paths) it's better to use .env file!
