--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -7,7 +7,7 @@ model_checkpoint:
   verbose: False
   dirpath: "checkpoints/"
   filename: "epoch_{epoch:03d}"
-  auto_insert_metric_name: True
+  auto_insert_metric_name: False
 
 #early_stopping:
 #  _target_: pytorch_lightning.callbacks.EarlyStopping
