--- a/configs/experiment/rethink_basic.yaml
+++ b/configs/experiment/rethink_basic.yaml
@@ -5,17 +5,16 @@ defaults:
   - override /model: archery_bowling_model.yaml
   - override /datamodule: archery_bowling_datamodule.yaml
   - override /callbacks: default.yaml # set this to null if you don't want to use callbacks
-  - override /logger: tensorboard.yaml # set logger here or use command line (e.g. `python run.py logger=wandb`)
+  - override /logger: rethink_tensorboard.yaml # set logger here or use command line (e.g. `python run.py logger=wandb`)
 
-name: "experiemint_TBA"
+run_name: "rethink_basic_01"
 
-# log_dir: ${work_dir}/../LOG/${final_name} #runs/${now:%Y-%m-%d--%H-%M-%S}
-# status_file: ${log_dir}/status-${final_name}.json
+
 trainer:
   max_epochs: 1
   num_sanity_val_steps: 0
-#  limit_val_batches: 0.5
-#  limit_train_batches: 0.5
+  limit_val_batches: 0.25
+  limit_train_batches: 0.5
 
 model:
   n_layers: 1
@@ -35,5 +34,3 @@ datamodule:
     - "seq_id"
     - "timestamp"
   window_size: 5
-
-
