--- a/configs/hydra/rethink.yaml
+++ b/configs/hydra/rethink.yaml
@@ -1,13 +1,17 @@
+
+
+# output paths for hydra logs
+
 run:
-  dir: ../rethink_LOG/${hydra.job.name}__${hydra.job.override_dirname}
+  dir: ${hydra.job.name}
 sweep:
-  dir: ../rethink_LOG/${hydra.job.name}
-  subdir: ${hydra.job.override_dirname}
+  dir: mulitrunX/
+  subdir: ${hydra.job.name}
 
 # you can set here environment variables that are universal for all users
 # for system specific variables (like data paths) it's better to use .env file!
 job:
-  name: ${name}
+  name: ${log_dir}
   env_set:
     EXAMPLE_VAR: "example_value"
   config:
