--- a/configs/rethink.yaml
+++ b/configs/rethink.yaml
@@ -2,7 +2,6 @@
 
 # specify here default training configuration
 defaults:
-  - hydra: my_hydra.yaml
   - trainer: archery_bowling_trainer.yaml
   - model: archery_bowling_model.yaml
   - datamodule: archery_bowling_datamodule.yaml
@@ -12,6 +11,7 @@ defaults:
   - experiment: null
   - hparams_search: null
 
+  - hydra: rethink.yaml
 
   # enable color logging
   - override hydra/hydra_logging: colorlog
@@ -22,13 +22,21 @@ defaults:
 # so it's useful to have this path as a special variable
 # learn more here: https://hydra.cc/docs/next/tutorials/basic/running_your_app/working_directory
 work_dir: ${hydra:runtime.cwd}
-name: ???
+log_dir: ${work_dir}/../LOG/${project_id}/${run_name}/
+
+project_id: ??? #"rethink_project_81"
+run_name: ??? # "dummy_run_name_01"
 
 
 # path to folder with data
 data_dir: ${work_dir}/../DATA/Archery_Bowling_v2/
 # log_dir: ??? #${work_dir}/../LOG/${final_name} #runs/${now:%Y-%m-%d--%H-%M-%S}
 # status_file: ??? #${log_dir}/status-${final_name}.json
+
+trainer:
+  max_epochs: 1
+  num_sanity_val_steps: 0
+  limit_train_batches: 0.25
 
 # use `python run.py debug=true` for easy debugging!
 # this will run 1 train, val and test loop with only 1 batch
