--- a/configs/experiment/wandb_01.yaml
+++ b/configs/experiment/wandb_01.yaml
@@ -8,14 +8,14 @@ defaults:
   - override /callbacks: my_wandb.yaml # set this to null if you don't want to use callbacks
   - override /logger: wandb.yaml # set logger here or use command line (e.g. `python run.py logger=wandb`)
 
-run_name: "fixing_confmat_10"
-project_id: "wandb-testing"
+run_name: "01"
+project_id: "Archery_Bowling"
 
 trainer:
   gpus:
     - 1 # 1 for GTX 2070
 #    - 0 # 0 for GTX 2080
-  max_epochs: 300
+  max_epochs: 500
 
 
 model:
