wandb resumption and batchsize fixing
- bs of last batch is now beeing adjusted!
- different bs for train/val/test are in theory possible, still working on the configuration

--- a/configs/datamodule/archery_bowling_datamodule.yaml
+++ b/configs/datamodule/archery_bowling_datamodule.yaml
@@ -4,7 +4,7 @@
 _target_: src.datamodules.archery_bowling_datamodule.ArcheryBowlingDataModule
 
 data_root: ${data_dir} # infer from config.yaml
-test: True              # load and compute files from session2
+test: ${test_after_training}              # load and compute files from session2
 val_ratio: 0.2          # try save some files from session1 for validation. (evenly distributed: .5 -> evey 2nd repetition)
 batch_size: 10000
 window_size: 10
