--- a/configs/experiment/mini_archery_2.yaml
+++ b/configs/experiment/mini_archery_2.yaml
@@ -4,8 +4,8 @@ defaults:
   - override /trainer: archery_bowling_trainer.yaml
   - override /model: archery_bowling_model.yaml
   - override /datamodule: archery_bowling_datamodule.yaml
-  - override /callbacks: default.yaml # set this to null if you don't want to use callbacks
-  - override /logger: tensorboard.yaml # set logger here or use command line (e.g. `python run.py logger=wandb`)
+  - override /callbacks: my_wandb.yaml # set this to null if you don't want to use callbacks
+  - override /logger: wandb.yaml # set logger here or use command line (e.g. `python run.py logger=wandb`)
 
 
 trainer:
