--- a/configs/logger/wandb.yaml
+++ b/configs/logger/wandb.yaml
@@ -3,12 +3,12 @@
 wandb:
   _target_: pytorch_lightning.loggers.wandb.WandbLogger
   project: ${project_id}
-  name: ${run_name}
+  name: ${run_name}/${hydra:job.override_dirname}
   save_dir: "."
   offline: False # set True to store all logs only locally
-  id: null # pass correct id to resume experiment! TODO handle training restart on cluster
+  id: null # created dynamically with the help of status.json
   # entity: ""  # set to name of your wandb team or just remove it
-  log_model: False
+  log_model: True
   prefix: ""
   job_type: "train"
   group: ""
